Add Robolectric tests.
Using Robolectric to run tests directly on computer, without a need for android device.